--- a/reports/templates/reports/index.html
+++ b/reports/templates/reports/index.html
@@ -2,30 +2,14 @@
 <head>
 	<title>Home Page</title>
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
-	 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
 	<style type="text/css">
-		body {background-color:gray;}
-		#map { 
-			height: 86%;
-			width: 75%;
-		 }
-		 #banner {
-		 	height: 110px;
-		 	width: 100%;
-		 	background-color: black;
-		 }
-		 #rigtside {
-		 	width: 25%;
-		 	float: right;
-		 }
-		 #login {
-		 	text-align: center;
-		 	border: 3px solid;
-		 	border-radius: 3px;
-		 	margin: 25px;
-		 }
-		 #news {
+		body { background-color:gray; }
+		#map { height: 86%; width: 75%; }
+		#banner { height: 110px; width: 100%; background-color: black; }
+		#rigtside { width: 25%; float: right; }
+		#news {
 		 	text-align: center;
 		 	border: 3px solid;
 		 	border-radius: 3px;
@@ -33,9 +17,8 @@
 		 	height: 58%;
 		 	overflow-y: scroll;
 		 }
-		 .feed {
-		 	margin: 5px;
-		 }
+		.widget { text-align: center; border: 3px solid; border-radius: 3px; margin: 25px; }
+		.feed { margin: 5px; }
 	</style>
 	<script type="text/javascript">
 		
@@ -48,8 +31,32 @@
 
 			 {% for x in report_list %}
 			 	var marker{{forloop.counter}} = L.marker([ {{x.latitude}} , {{x.longitude}} ]).addTo(map);
-			 	marker{{forloop.counter}}.bindPopup('{{ x.description }} : {{x.date}} <br> <img src={{x.photo_path}} height=30 width=40 />');
+			 	marker{{forloop.counter}}.bindPopup('{{ x.description }} : {{x.date}} <br> <img src={{x.photo_path}} height=100 width=120 align="middle"/>');
 			 {% endfor %}
+
+			 $( "#pueblos" ).change(function () {
+			 	if ($(this).val() == "San Juan")
+			 		map.setView([18.385153,-66.062958], 12);
+			 	else if ($(this).val() == "Aibonito")
+			 		map.setView([18.140142,-66.266455], 13);
+				else if ($(this).val() == "Mayagüez")
+			 		map.setView([18.198044,-67.128235], 13);
+			 	else if ($(this).val() == "Caguas")
+			 		map.setView([18.234895,-66.045052], 13);
+			 	else if ($(this).val() == "Ponce")
+			 		map.setView([18.008121,-66.608841], 13);
+			 	else if ($(this).val() == "Vieques")
+			 		map.setView([18.126602,-65.441147], 12);
+			 	else if ($(this).val() == "Culebra")
+			 		map.setView([18.317374,-65.287682], 13);
+			 	else if ($(this).val() == "Fajardo")
+			 		map.setView([18.326174,-65.652607], 13);
+			 	else if ($(this).val() == "Arecibo")
+			 		map.setView([18.464793,-66.716393], 13);
+			 	else
+			 		map.setView([18.15, -66.30], 9);
+			 });
+
 		});
 
 	</script>
@@ -60,7 +67,7 @@
 		<img src="/images/drop_logo.png" height=80 width=110 >
 	</div>
 	<div id="rigtside">
-		<div id="login">
+		<div id="login" class="widget">
 			<br><br>
 			<form name="login-form" action="" method="post">
 				<input name="username" type="text" placeholder="Username" /><br><!--END USERNAME-->
@@ -69,18 +76,30 @@
 			</form><br>
 				<!--end login form-->
 		</div>
+		<div id="views" class="widget">
+			<br>
+			VIEW POINT :
+		<select id="pueblos" name="pueblos">
+  			<option selected="selected">All</option>
+ 			<option>San Juan</option> <option>Aibonito</option>
+			<option>Mayagüez</option> <option>Caguas</option>
+			<option>Ponce</option>    <option>Arecibo</option>
+			<option>Fajardo</option>  <option>Vieques</option>
+			<option>Culebra</option>
+		</select>
+		<br><br>
+		</div>
 		<div id="news">
 			{% for x in report_list %}
 			<div class="feed"> 
 				<h3> {{x.description}} : {{x.date}} </h3>
-					<img src="{{x.photo_path}}" height=40 width=50 alt="No Avalible" >
+					<img src="{{x.photo_path}}" height=40 width=55 alt="No Avalible" >
 				<p> {{x.status_comment}} </p>
 
 				<hr>
 			</div>
 			{% endfor %}
 		</div>
-
 	</div>
 	<div id="map"></div>
 
