--- a/reports/templates/reports/index.html
+++ b/reports/templates/reports/index.html
@@ -37,7 +37,7 @@
 
 			{% for x in report_list %}
 			 	var marker{{forloop.counter}} = L.marker([ {{x.latitude}} , {{x.longitude}} ]).addTo(map);
-			 	marker{{forloop.counter}}.bindPopup('{{ x.description }} : {{x.date}} <br> <img src={{x.photo_path}} height=100 width=120 align="middle"/>');
+			 	marker{{forloop.counter}}.bindPopup('{{ x.description }} : {{x.date}} <br> <img src=images/{{x.photo_path}} height=100 width=120 align="middle"/>');
 			{% endfor %}
 
 			$("#pueblos").change(function () {
@@ -97,7 +97,7 @@
 			{% for x in report_list %}
 			<div class="feed"> 
 				<h3> {{x.description}} : {{x.date}} </h3>
-					<img src="{{x.photo_path}}" height=40 width=55 alt="No Avalible" >
+					<img src="images/{{x.photo_path}}" height=40 width=55 alt="No Avalible" >
 				<p> {{x.status_comment}} </p>
 
 				<hr>
