--- a/AAA/templates/admin/base_site.html
+++ b/AAA/templates/admin/base_site.html
@@ -6,7 +6,7 @@
 {% block title %}{{ title }} | {% trans 'AAARHA' %}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name">{% trans 'AAA Reporte de Hurtos y Averias' %}</h1>
+<h1 id="site-name">{% trans 'AAARHA' %}</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
