--- a/reports/templates/reports/index.html
+++ b/reports/templates/reports/index.html
@@ -1,116 +1,100 @@
-<html>
-<head>
-	<title>Home Page</title>
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
-	<link data-require="bootstrap-css@*" data-semver="3.0.0" rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
-    <link data-require="bootstrap@*" data-semver="3.0.0" rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
-    <script data-require="bootstrap@*" data-semver="3.0.0" src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script data-require="jquery@*" data-semver="2.0.3" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-	<style type="text/css">
-		body { background-color:#CCC; min-width: 800px; padding-top: 50px;}
-		#map { height: 100%; width: 75%; }
-		#banner { height: 110px; width: 100%; background-color: black; }
-		#rigtside { width: 25%; float: right; }
-		#news {
-		 	text-align: center;
-		 	height: 70%;
-		 	overflow-y: scroll;
-		 }
-		#login {
-			float:right; 
-			font-color:white; 
-			margin-right:8%; 
-			text-align: center;
-		}
-		.widget { 
-			background-color: #AAA;
-			text-align: center;
-		 	border: 3px solid; 
-		 	border-radius: 3px; 
-		 	margin: 25px; }
-		.feed { margin: 5px; }
-		.footer {
-			text-align: right;
-  			padding-top: 16px;
-  			color: #FFFFFF;
-  			margin-right:8%;
-  			border-top: 1px solid #FFFFFF;
-		}
-		h3 {
-			text-align: center;
-		}
-		h2 { font-size: 18px; }
-	</style>
-	<script type="text/javascript">
-		
-		$(document).ready(function() {
-			var map = L.map('map').setView([18.15, -66.30], 9);
+{% extends "reports/base.html" %}
+	{% block head %}
+		<title>Home Page</title>
+		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+		<script data-require="jquery@*" data-semver="2.0.3" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+	{% endblock %}
 
-			L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-	    		attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-			}).addTo(map);
+	{% load bootstrap3 %}
+	{% bootstrap_css %}
 
-			{% for x in report_list %}
-			 	var marker{{forloop.counter}} = L.marker([ {{x.latitude}} , {{x.longitude}} ]).addTo(map);
-			 	marker{{forloop.counter}}.bindPopup('{{ x.description }} : {{x.date}} <br> <img src=images/{{x.photo_path}} height=100 width=120 align="middle"/>');
-			{% endfor %}
+    {% block stylesheets %}
+		<style type="text/css">
+			html {height: 100%;}
+			body { background-color:#CCC; min-width: 800px; padding-top: 50px; height: 100%;}
+			#leaflet_map { height: 100%; width: 75%; }
+			#content { height: 100%; width: 100%; }
+			#banner { height: 110px; width: 100%; background-color: black; }
+			#rigtside { width: 25%; float: right; }
+			#news {
+			 	text-align: center;
+			 	height: 70%;
+			 	overflow-y: scroll;
+			 }
+			#login {
+				float:right; 
+				font-color:white; 
+				margin-right:8%; 
+				text-align: center;
+			}
+			.widget { 
+				background-color: #AAA;
+				text-align: center;
+			 	border: 3px solid; 
+			 	border-radius: 3px; 
+			 	margin: 25px; }
+			.feed { margin: 5px; }
+			.footer {
+				text-align: right;
+	  			padding-top: 16px;
+	  			color: #FFFFFF;
+	  			margin-right:8%;
+	  			border-top: 1px solid #FFFFFF;
+			}
+			h3 {
+				text-align: center;
+			}
+			h2 { font-size: 18px; }
+		</style>
+	{% endblock %}
 
-			$("#pueblos").change(function () {
-			 	if ($(this).val() == "San Juan")
-			 		map.setView([18.385153,-66.062958], 12);
-			 	else if ($(this).val() == "Aibonito")
-			 		map.setView([18.140142,-66.266455], 13);
-				else if ($(this).val() == "Mayagüez")
-			 		map.setView([18.198044,-67.128235], 13);
-			 	else if ($(this).val() == "Caguas")
-			 		map.setView([18.234895,-66.045052], 13);
-			 	else if ($(this).val() == "Ponce")
-			 		map.setView([18.008121,-66.608841], 13);
-			 	else if ($(this).val() == "Vieques")
-			 		map.setView([18.126602,-65.441147], 12);
-			 	else if ($(this).val() == "Culebra")
-			 		map.setView([18.317374,-65.287682], 13);
-			 	else if ($(this).val() == "Fajardo")
-			 		map.setView([18.326174,-65.652607], 13);
-			 	else if ($(this).val() == "Arecibo")
-			 		map.setView([18.464793,-66.716393], 13);
-			 	else
-			 		map.setView([18.15, -66.30], 9);
-			 });
+	 {% block javascript %}
+		<script type="text/javascript">
+			
+			$(document).ready(function() {
+				var map = L.map('leaflet_map').setView([18.15, -66.30], 9);
 
-		});
+				L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+		    		attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+				}).addTo(map);
 
-	</script>
-</head>
-<body>
-	<div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href=""><img src="/images/drop_logo.png" height=20 width=20 > &nbsp;AAA Reports</a>
-        </div>
-        <div class="navbar-collapse collapse">
-        	{% if user.is_authenticated %}
-        	<form action="profiles/logout/" class="navbar-form navbar-right" method="post">
-        		{% csrf_token %}
-    			<button type="submit" class="btn btn-success">Logout</button>
-    		</form>
-			{% else %}
-            <form action="profiles/" class="navbar-form navbar-right" method="post">
-          	{% csrf_token %}
-            	<div class="form-group">
-              		<input type="text" placeholder="username" class="form-control" name="username">
-            	</div>
-            	<div class="form-group">
-              		<input type="password" placeholder="password" class="form-control" name="password">
-            	</div>
-            		<button type="submit" class="btn btn-success">Sign in</button>
-          	</form>
-          	{% endif %}
-        </div><!--/.navbar-collapse -->
-      </div>
-    </div>
+				{% for x in report_list %}
+				 	var marker{{forloop.counter}} = L.marker([ {{x.latitude}} , {{x.longitude}} ]).addTo(map);
+				 	marker{{forloop.counter}}.bindPopup('{{ x.description }} : {{x.date}} <br> <img src=images/{{x.photo_path}} height=100 width=120 align="middle"/>');
+				{% endfor %}
+
+				$("#pueblos").change(function () {
+				 	if ($(this).val() == "San Juan")
+				 		map.setView([18.385153,-66.062958], 12);
+				 	else if ($(this).val() == "Aibonito")
+				 		map.setView([18.140142,-66.266455], 13);
+					else if ($(this).val() == "Mayagüez")
+				 		map.setView([18.198044,-67.128235], 13);
+				 	else if ($(this).val() == "Caguas")
+				 		map.setView([18.234895,-66.045052], 13);
+				 	else if ($(this).val() == "Ponce")
+				 		map.setView([18.008121,-66.608841], 13);
+				 	else if ($(this).val() == "Vieques")
+				 		map.setView([18.126602,-65.441147], 12);
+				 	else if ($(this).val() == "Culebra")
+				 		map.setView([18.317374,-65.287682], 13);
+				 	else if ($(this).val() == "Fajardo")
+				 		map.setView([18.326174,-65.652607], 13);
+				 	else if ($(this).val() == "Arecibo")
+				 		map.setView([18.464793,-66.716393], 13);
+				 	else
+				 		map.setView([18.15, -66.30], 9);
+				 });
+
+			});
+
+		</script>
+
+	{% endblock %}
+
+	{% block content %} 
 
 	<div id="rigtside">
 		<div id="views" class="widget">
@@ -139,6 +123,6 @@
         	<p>&copy; AAA Reports 2013</p>
       	</div>
 	</div>
-	<div id="map"></div>
-</body>
-</html>
+	<div id="leaflet_map"></div>
+
+	{% endblock %}
