--- a/reports/templates/reports/index.html
+++ b/reports/templates/reports/index.html
@@ -17,7 +17,7 @@
 			#leaflet_map { height: 100%; width: 75%; }
 			#content { height: 100%; width: 100%; }
 			#banner { height: 110px; width: 100%; background-color: black; }
-			#rigtside { width: 25%; float: right; }
+			#rigtside { width: 25%; float: right; height: 100%; }
 			#news {
 			 	text-align: center;
 			 	height: 70%;
