Registration Page Link on index

--- a/profiles/templates/accounts/register.html
+++ b/profiles/templates/accounts/register.html
@@ -21,7 +21,7 @@
 
     <body>
         <div class="container">
-        <h3>REGISTRATION PAGE</h3>
+        <i class="icon-user"></i><h3>REGISTRATION PAGE</h3>
 
         {% if registered %}
         <strong>Thank you for registering!</strong>
