--- a/reports/templates/reports/base.html
+++ b/reports/templates/reports/base.html
@@ -24,37 +24,45 @@
         	{% if user.is_authenticated %}
 	        	<form action="{% url 'logout_view' %}" class="navbar-form navbar-right" method="post">
 	        		{% csrf_token %}
-	    			<button type="submit" class="btn btn-success">Logout</button>
+	    			<button type="submit" class="btn btn-danger">Logout</button>
+	    			Welcome, {{ user.name }}
 	    		</form>
 	    		{% if user.is_superuser %}
 		        	<form action="{% url 'admin:index' %}" class="navbar-form navbar-right" method="post">
 		        		{% csrf_token %}
-		    			<button type="submit" class="btn btn-success">Admin</button>
+		    			<button type="submit" class="btn btn-warning">Admin Home</button>
 		    		</form>
 	    		{% endif %}
 	    		{% if perms.profiles.supervisor_permission %}
         			<form action="{% url 'supervisor_view' %}" class="navbar-form navbar-right" method="post">
 	        			{% csrf_token %}
-	    			<button type="submit" class="btn btn-success">Home</button>
+	    			<button type="submit" class="btn btn-primary">Supervisor Home</button>
 	    		</form>
         		{% endif%}
         		{% if perms.profiles.employee_permission %}
         			<form action="{% url 'employee_view' %}" class="navbar-form navbar-right" method="post">
 	        			{% csrf_token %}
-	    			<button type="submit" class="btn btn-success">Home</button>
+	    			<button type="submit" class="btn btn-success">Employee Home</button>
 	    		</form>
         		{% endif%}
 			{% else %}
+			<div class= "navbar-right" >
 	            <form action="{% url 'django.contrib.auth.views.login' %}" class="navbar-form navbar-right" method="post">
 	          	{% csrf_token %}
 	            	<div class="form-group">
-	              		<input type="text" placeholder="Username" class="form-control" name="username">
+	              		<input type="text" placeholder="Email" class="form-control" name="username">
 	            	</div>
 	            	<div class="form-group">
 	              		<input type="password" placeholder="Password" class="form-control" name="password">
 	            	</div>
 	            		<button type="submit" class="btn btn-success">Sign in</button>
+	    
 	          	</form>
+	          	<span>
+	          	<a href="/profiles/register/"><button class="btn navbar-btn btn-info"><span class="glyphicon glyphicon-user"></span> Register</button></a>
+	            </div>
+	        </div>
+    			
           	{% endif %}
         </div><!--/.navbar-collapse -->
       </div>
