--- a/reports/templates/reports/index.html
+++ b/reports/templates/reports/index.html
@@ -34,7 +34,10 @@
 				text-align: center;
 			 	border: 3px solid; 
 			 	border-radius: 3px; 
-			 	margin: 25px; }
+			 	margin: 25px; 
+			 	height: 65px;
+			 	width: 80%; 
+			 }
 			.feed { margin: 5px; }
 			.footer {
 				text-align: right;
