--- a/reports/templates/reports/create_reports.html
+++ b/reports/templates/reports/create_reports.html
@@ -123,7 +123,8 @@
 		</h2>
 		</div> 
 		<div id="news">
-			<h2> Create Report </h2><br>
+			<h2> Create Report </h2>
+			Please click the report location on the map.
 			<form enctype="multipart/form-data" method="post">
             	{% csrf_token %}
             	{% bootstrap_form form layout="inline"%}
