--- a/reports/templates/reports/base.html
+++ b/reports/templates/reports/base.html
@@ -18,7 +18,7 @@
 	<div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href=""><img src="/images/drop_logo.png" height=20 width=20 > &nbsp;AAA Reports</a>
+          <a class="navbar-brand" href="/"><img src="/images/drop_logo.png" height=20 width=20 > &nbsp;AAA Reports</a>
         </div>
         <div class="navbar-collapse collapse">
         	{% if user.is_authenticated %}
@@ -47,7 +47,10 @@
 	    
 	          	</form>
 	          	<span>
+	          	<a href="/reports/create"><button class="btn navbar-btn btn-primary"><span class="glyphicon glyphicon-tint"></span> Create Report</button></a>	
 	          	<a href="/profiles/register/"><button class="btn navbar-btn btn-info"><span class="glyphicon glyphicon-user"></span> Register</button></a>
+
+
 	            </div>
 	        </div>
     			
