--- a/reports/templates/reports/index.html
+++ b/reports/templates/reports/index.html
@@ -101,7 +101,7 @@
 
 	<div id="rigtside">
 		<div id="views" class="widget">
-			<h2>VIEW POINT:
+			<h2>View Point:
 			<select id="pueblos" name="pueblos">
   				<option selected="selected">All</option>
  				<option>San Juan</option> <option>Aibonito</option>
@@ -112,12 +112,12 @@
 			</select>
 		</h2>
 		</div> 
-		<h3>NEWS FEED</h3>
+		<h3>News Feed</h3>
 		<div id="news">
 			{% for x in report_list %}
 			<div class="feed" style="border-top: 1px solid #000000;"> 
 				<h2> {{x.description}} : {{x.date}} </h2>
-					<img src="images/{{x.photo_path}}" height=40 width=55 alt="No Avalible" >
+					<img src="../images/{{x.photo_path}}" height=40 width=55 alt="No Avalible" >
 				<p> {{x.status_comment}} </p>
 			</div>
 			{% endfor %}
