--- a/reports/templates/reports/create_reports.html
+++ b/reports/templates/reports/create_reports.html
@@ -128,7 +128,7 @@
 			<form enctype="multipart/form-data" method="post">
             	{% csrf_token %}
             	{% bootstrap_form form layout="inline"%}
-            	<input type='hidden' name="status" value="R" />
+            	<input type='hidden' id="id_status" name="status" value="R" />
             	<input type='hidden' name="status_comment" value="Reported" />
            		<br> <button type="submit" class="btn btn-success"> Submit </button>
         	</form>
