--- a/reports/templates/reports/base.html
+++ b/reports/templates/reports/base.html
@@ -5,6 +5,7 @@
 	 {% load admin_urls %}
 	 {% load bootstrap3 %}
 	 {% bootstrap_css %}
+	 {% bootstrap_javascript jquery=True %}
 	 {% block head %}{% endblock %}
 	 {% block javascript %}{% endblock %}
 	 <style type="text/css">
