--- a/profiles/templates/profiles/supervisor.html
+++ b/profiles/templates/profiles/supervisor.html
@@ -4,45 +4,116 @@
 {% bootstrap_javascript %}
 
  {% block stylesheets %}
+ 	 <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
+  	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css" />
   	<style type="text/css">
 			#Reports{ 
 				padding: 3%;
-				height: 100%; 
-				width: 60%; 
+				height: 100%;
+				width: 60%;
 				float:right; 
 			}
 			#Assigned {
 				padding: 3%;
-				width: 40%; 
-				float: right; 
+				width: 40%;
+				float: right;
 				height: 100%;
 			}
 			.assrep { padding-left: 10%;}
+			a:link {color:#000;}      /* unvisited link */
+			a:hover {color:#0000FF;
+				text-decoration:none;}  /* mouse over link */
 	</style>
  {% endblock %}
 
 {% block content %}
 <h2> &nbsp;SUPERVISOR : {{ user.name }} {{ user.last_name }}</h2>
 <div id="Assigned">
-	<h3 style="text-align:center;"> Assigned Reports </h3><br>
-	{% for x in assign_list %}
-		<h4 class="assrep"> {{x.description}} : <h4 style="text-align:right;">{{x.assign_to}} </h4></h4>
-		<hr>
-	{% endfor %}
+	<h3 style="text-align:center;"> Assigned Reports </h3>
+			<div id="myAccordion" class="accordion">
+					{% for x in assign_list %}
+					<div class="accordion-group">
+						<div class="accordion-heading">
+							<a href="#collapse{{x.id}}" data-parent="#myAccordion" data-toggle="collapse" class="accordion-toggle">
+								<h4>{{x.id}} : {{x.description}} ( {{x.date}} )</h4> 
+							</a>
+						</div>
+						<div class="accordion-body collapse" id="collapse{{x.id}}">
+							<div class="accordion-inner">
+								<p>{{x.status}}  : {{x.status_comment}} </p>
+							</div>
+						</div>
+					</div>  
+					{% endfor %} 
+				</div> 
 </div> 
 <div id="Reports">
 		<h3 style="text-align:center;"> Unassign Reports </h3>
-		{% for x in report_list %}
-				<h3> {{x.description}} : {{x.date}} </h3>
-				<div style="width:150%;">
-					<form method="post">
-						{% csrf_token %}
-						<input type='hidden' name="id" value="{{ x.id }}" />
-						{% bootstrap_form form layout="horizontal" %}
-           			     <button type="submit" class="btn btn-success">Assign</button>
-					</form>
-				</div>
-				<hr>
-		{% endfor %}
+
+		<div id="List">
+				<div id="myAccordion" class="accordion">
+					{% for x in report_list %}
+					<div class="accordion-group">
+						<div class="accordion-heading">
+							<a href="#collapse{{x.id}}" data-parent="#myAccordion" data-toggle="collapse" class="accordion-toggle">
+								<h3>{{x.id}} : {{x.description}} ( {{x.date}} )</h3> 
+							</a>
+						</div>
+						<div class="accordion-body collapse" id="collapse{{x.id}}">
+							<div class="accordion-inner">
+								<form method="post">
+									{% csrf_token %}
+									<input type='hidden' name="id" value="{{ x.id }}" />
+									{% bootstrap_form form layout="inline" %}
+									<button type="submit" class="btn btn-success">Assign</button>
+									<button class="btn btn-primary" data-toggle="modal" data-target="#myModal{{x.id}}">
+									  More Info
+									</button>
+
+									<!-- Modal -->
+									<div class="modal fade" id="myModal{{x.id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+									  <div class="modal-dialog">
+									    <div class="modal-content">
+									      <div class="modal-header">
+									        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+									        <h4 class="modal-title" id="myModalLabel">{{x.id}} : {{x.description}} ( {{x.date}} )</h4>
+									      </div>
+									      <div class="modal-body">
+									      	<div id="map{{x.id}}" style="width:500px; height:350px;"></div>
+									        <script type="text/javascript">
+									        	//var map = L.map('map{{x.id}}').setView([{{x.latitude}},{{x.longitude}}], 10);
+									        	var map = L.map('map{{x.id}}', {
+    													center: [{{x.latitude}},{{x.longitude}}],
+    													zoom: 13
+														});
+
+												// add an OpenStreetMap tile layer
+												L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+												    attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+												}).addTo(map);
+
+												// add a marker in the given location, attach some popup content to it and open the popup
+												L.marker([{{x.latitude}},{{x.longitude}}]).addTo(map)
+
+									        </script>
+									        Description: {{x.description}}
+									      </div>
+									    </div><!-- /.modal-content -->
+									  </div><!-- /.modal-dialog -->
+									</div><!-- /.modal -->
+								</form>
+							</div>
+						</div>
+					</div>  
+					{% endfor %} 
+				</div> 
+			</div>
+
 </div>
+
+{% for x in report_list %}
+<!-- Button trigger modal -->
+
+
+{% endfor %} 
 {% endblock %}
